--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "ziggy": "^2.4.0",
+        "ziggy-js": "^2.3.1"
     }
 }
